iac/week-7/demo-4/k8s-manifests/ValidatingWebhookConfiguration.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "webhook-server.webhook-demo.svc"
webhooks:
  - name: "webhook-server.webhook-demo.svc"
    rules:
      - apiGroups:   [""]
        apiVersions: ["v1"]
        operations:  ["CREATE"]
        resources:   ["pods"]
        scope:       "Namespaced"
    clientConfig:
      service:
        namespace: "webhook-demo"
        name: "webhook-server"
        path: "/validate"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURGVENDQWYyZ0F3SUJBZ0lVWENxbUJHUTE2SVVGR0FDR3cyTVZ2TmlJLzZjd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0dqRVlNQllHQTFVRUF3d1BWMlZpYUc5dmF5QkVaVzF2SUVOQk1CNFhEVEl6TVRJek1ERXdNVEExTVZvWApEVEkwTURFeU9URXdNVEExTVZvd0dqRVlNQllHQTFVRUF3d1BWMlZpYUc5dmF5QkVaVzF2SUVOQk1JSUJJakFOCkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXFkY2V5dXRNNGo5d2dLc2VRNDlXMjlzdFpQb3YKT2hHd2lCNFlCNGx3YWpleHBIejFCUGhiWFRUZU82VDlEZTZNOWtWMUZaYjVuQzFMVmRIdCtZN2NCRXRzcFNBNApkempUVjBleXV [...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 10
